--- a/DoAnKy3.csproj
+++ b/DoAnKy3.csproj
@@ -210,6 +210,8 @@
     <Content Include="Views\TimeKeeping\Index.cshtml" />
     <Content Include="Views\Department\Edit.cshtml" />
     <Content Include="Views\Department\Add.cshtml" />
+    <Content Include="Views\Employee\Edit.cshtml" />
+    <Content Include="Views\Employee\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
